--- a/views/About.ejs
+++ b/views/About.ejs
@@ -53,9 +53,6 @@
   
       <div id="bio" class="tab col-9" style="display: none;">
         <section>
-            <!--<div class="section-heading mt-3">
-                <h2>Maral Abkarian</h2>
-            </div>-->
             <div class="biography col-10 offset-1">
                 <div class="bio-square square-first">
                     <img class="square-img" src="https://i.imgur.com/4rBbPSy.png" style="float: left"/>
@@ -67,7 +64,7 @@
                     </p>
                 </div>
                 <div class="bio-square">
-                    <!--<h1 class="square-title">Lorem ipsum dolor sit</h1>-->
+                    <h1 class="square-title">Lorem ipsum dolor sit</h1>
                     <p class="square-txt">
                       C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne,
                       faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge, elle fut remarquée pour son talent artistique et sa sensibilité, 
@@ -107,7 +104,7 @@
         <section class="blog-section">
             <div class="container container-blog">
               <div class="col-10 offset-1 wrapper" id="container-blog">
-                <% if(locals.blogs){ %>
+                <% if (locals.blogs){ %>
                   <% Object.keys(locals.blogs).forEach(function (index) { %>
                       <div class="blog-row" id="<%= locals.blogs[index]._id %>">
                         <h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3> 
@@ -120,7 +117,6 @@
                         <div class="blog-overlay-wrapper">
                           <div class="blog-overlay">
                             <div class="content-holder"></div>
-                            <!--<p><%= locals.blogs[index].shortcontent %>...</p>-->
                             <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
                           </div>
                         </div>
@@ -129,7 +125,6 @@
                         <div class="blog-no-overlay-wrapper">
                           <div class="blog-no-overlay">
                             <div class="content-holder"></div>
-                            <!--<p><%= locals.blogs[index].shortcontent %>...</p>-->
                             <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
                           </div>
                         </div>
@@ -149,6 +144,10 @@
                       </script>
 
                   <% }) %>
+                <% } else { %>
+                  <div class="text-center m-5 p-5" style="background: white">
+                    <h1>Blog page is under maintenance, please come back later</h1>
+                  </div>
                 <% } %>
               </div>
             </div>
