--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -2,100 +2,97 @@
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <div class="container-with-menu container">
-  <div class="row row-height">
-    <div class="menu col-3">
-      <ul>
-        <li>
-          <a
-            href="#"
-            onclick="openTab(event, this, 'login')"
-            class="menu-link active disabled"
-            ><i class="fas fa-sign-in-alt mr-2"></i> Connexion
-            <i class="fas fa-chevron-right chev"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="#"
-            onclick="openTab(event, this, 'lostpw-container')"
-            class="menu-link"
-            ><i class="fas fa-key mr-2"></i>
-            <span style="font-size: 20px;">Mot de passe oublié</span>
-            <i class="fas fa-chevron-right chev"></i
-          ></a>
-        </li>
-        <!--<li><a href="#" onclick="openTab(event, this, 'resetpw')" class="menu-link"><i class="fas fa-envelope mr-2"></i> Reset Password <i class="fas fa-chevron-right chev"></i></a></li>-->
-      </ul>
-    </div>
+	<div class="row row-height">
+		<div class="menu col-3">
+			<ul>
+				<li>
+					<a href="#" onclick="openTab(event, this, 'login')" class="menu-link active disabled"><i class="fas fa-sign-in-alt mr-2"></i> Connexion <i class="fas fa-chevron-right chev"></i></a>
+				</li>
+				<li>
+					<a href="#" onclick="openTab(event, this, 'lostpw-container')" class="menu-link"
+						><i class="fas fa-key mr-2"></i>
+						<span style="font-size: 20px;">Mot de passe oublié</span>
+						<i class="fas fa-chevron-right chev"></i
+					></a>
+				</li>
+			</ul>
+		</div>
 
-    <div id="login" class="tab col-9 row">
-      <div class="container" id="container">
-        <div class="form-slider-container sign-up-container">
-          <form class="form-slider" id="register" onsubmit="submitRegister(event)" method="POST" action="/api/auth/register">
-            <h1>S'inscrire</h1>
+		<div id="login" class="tab col-9 row">
+			<div class="container" id="container">
+				<div class="form-slider-container sign-up-container">
+					<form class="form-slider" id="register" onsubmit="submitRegister(event)" method="POST" action="/api/auth/register">
+						<h1>S'inscrire</h1>
 
-            <input placeholder="Jean75" type="text" name="name" id="name" onkeyup="Validate.String(this, 4, 30);" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required/>
-            <span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
+						<input placeholder="Jean75" type="text" name="name" id="name" onkeyup="Validate.String(this, 4, 30);" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required />
+						<span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
 
-            <input placeholder="jeandupont@gmail.com" type="email"name="email" id="email" onkeyup="Validate.Email(this);" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required/>
-            <span id="i_email" class="form-info">E-mail has to be valid</span>
+						<input
+							placeholder="jeandupont@gmail.com"
+							type="email"
+							name="email"
+							id="email"
+							onkeyup="Validate.Email(this);"
+							value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
+							required
+						/>
+						<span id="i_email" class="form-info">E-mail has to be valid</span>
 
-            <input placeholder="Mot de passe" type="password" name="password" id="password" onkeyup="Validate.Password(this);" required/>
-            <span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to beatleast alphanumeric</span>
+						<input placeholder="Mot de passe" type="password" name="password" id="password" onkeyup="Validate.Password(this);" required />
+						<span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to beatleast alphanumeric</span>
 
-            <input placeholder="Mot de passe (confirmation)" type="password" name="password2" id="password2" onkeyup="Validate.Password2(this);" required/>
-            <span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
+						<input placeholder="Mot de passe (confirmation)" type="password" name="password2" id="password2" onkeyup="Validate.Password2(this);" required />
+						<span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
 
-            <div class="g-recaptcha" data-sitekey="6Ld8MaUZAAAAAOCR-6L6VcBgFJyBhFWWLnHPInJ9"></div>
-            <input type="submit" class="logbtn" value="Inscription" id="submit-register"/>
-          </form>
-        </div>
+						<div class="g-recaptcha" data-sitekey="6Ld8MaUZAAAAAOCR-6L6VcBgFJyBhFWWLnHPInJ9"></div>
+						<input type="submit" class="logbtn" value="Inscription" id="submit-register" />
+					</form>
+				</div>
 
-        <div class="form-slider-container sign-in-container">
-          <form class="form-slider" id="login-form" method="POST" action="/api/auth/login">
+				<div class="form-slider-container sign-in-container">
+					<form class="form-slider" id="login-form" method="POST" action="/api/auth/login">
+						<h1 class="mb-3">Se connecter</h1>
+						<input placeholder="Email" type="email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required />
+						<input placeholder="Mot de passe" type="password" name="password" required />
 
-            <h1 class="mb-3">Se connecter</h1>
-            <input placeholder="Email" type="email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required/>
-            <input placeholder="Mot de passe" type="password" name="password" required/>
+						<input type="submit" class="logbtn" value="Connexion" id="submit-login" />
+					</form>
+				</div>
 
-            <input type="submit" class="logbtn" value="Connexion" id="submit-login"/>
-          </form>
-        </div>
+				<div class="overlay-container">
+					<div class="overlay">
+						<div class="overlay-panel overlay-left">
+							<h1>Bienvenue!</h1>
+							<p>Pour accéder à votre compte, connectez vous en cliquant sur ce bouton</p>
+							<button class="ghost" id="signIn">Connexion</button>
+						</div>
+						<div class="overlay-panel overlay-right">
+							<h1>Pas encore de compte?</h1>
+							<p>Créez un compte en moins d'une minute</p>
+							<button class="ghost" id="signUp">Inscription</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-        <div class="overlay-container">
-          <div class="overlay">
-            <div class="overlay-panel overlay-left">
-              <h1>Bienvenue!</h1>
-              <p>Pour accéder à votre compte, connectez vous en cliquant sur ce bouton</p>
-              <button class="ghost" id="signIn">Connexion</button>
-            </div>
-            <div class="overlay-panel overlay-right">
-              <h1>Pas encore de compte?</h1>
-              <p>Créez un compte en moins d'une minute</p>
-              <button class="ghost" id="signUp">Inscription</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+		<div id="lostpw-container" class="tab col-9" style="display: none;">
+			<section class="lostpw-section col-10 offset-1 p-5">
+				<div class="box">
+					<div class="section-heading mb-5">
+						<h2>Récupération de mot de passe</h2>
+						<h6>Nous vous enverrons un <b>mail</b> pour réinitaliser votre mot de passe</h6>
+					</div>
+					<form class="col-8 offset-2" id="lostpw" method="POST" action="/api/user/lostpw">
+						<input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="" onkeyup="Validate.Email(this);" required />
+						<span id="i_email-reset" class="form-info">E-mail has to be valid</span>
 
-    <div id="lostpw-container" class="tab col-9" style="display: none;">
-      <section class="lostpw-section col-10 offset-1 p-5">
-        <div class="box">
-          <div class="section-heading mb-5">
-            <h2>Récupération de mot de passe</h2>
-            <h6>Nous vous enverrons un <b>mail</b> pour réinitaliser votre mot de passe</h6>
-          </div>
-          <form class="col-8 offset-2" id="lostpw" method="POST" action="/api/user/lostpw">
-            <input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required/>
-            <span id="i_email-reset" class="form-info">E-mail has to be valid</span>
-
-            <input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw"/>
-          </form>
-        </div>
-      </section>
-    </div>
-  </div>
+						<input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw" />
+					</form>
+				</div>
+			</section>
+		</div>
+	</div>
 </div>
 
 <script src="/scripts/submit-register.js"></script>
