--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -4,67 +4,57 @@
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
 <div class="container">
-  <form class="col-6 offset-3" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)"onsubmit="filterByTags(event)"> 
-    <label class="control-label search-label">Filtrer par tags</label>
-    <input class="form-control" type="text" placeholder="Entrez un mot puis appuyez sur entrer..." value="" data-role="tagsinput" id="tagInput">
-    <span data-placeholder="Tags"></span>
+	<form class="col-6 offset-3" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
+		<label class="control-label search-label">Filtrer par tags</label>
+		<input class="form-control" type="text" placeholder="Entrez un mot puis appuyez sur entrer..." value="" data-role="tagsinput" id="tagInput" />
+		<span data-placeholder="Tags"></span>
 
-    <input type="submit" class="logbtn mb-2" value="Filter" id="submit-tags">
-  </form>
-  <div class="container-gallery" id="container-gallery">
-    <% if(locals.galleries){ %>
-      <% Object.keys(locals.galleries).forEach(function (index) { %>
-        <div class="expandable-card" id="<%= locals.galleries[index]._id %>">
-          <div class="face face1 blog-overlay-wrapper mt-0">
-            <a href="#expand">
-              <img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100" alt="<%= locals.galleries[index].title %>">
-            </a>
-            <div class="blog-overlay">
-              <h4 class="card-title"><i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i></h4>
-              <div class="gallery-tags mt-5">
-                <% locals.galleries[index].tags.forEach(function (tag) { %>
-                  <a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
-                <% }) %>
-              </div>
-              <form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">Lire plus</button></form>
-            </div>
-          </div>
-        </div>
-      <% }) %>
-    <% } %>
-  </div>
-  <% if (!locals.error) { %>
-  <div class="col-6 offset-3 mb-3 mt-3">
-    <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
-    <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteTags();">
-  </div>
-  <% } %>
+		<input type="submit" class="logbtn mb-2" value="Filter" id="submit-tags" />
+	</form>
+	<div class="container-gallery" id="container-gallery">
+		<% if(locals.galleries){ %> <% Object.keys(locals.galleries).forEach(function (index) { %>
+		<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
+			<div class="face face1 blog-overlay-wrapper mt-0">
+				<a href="#expand">
+					<img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100" alt="<%= locals.galleries[index].title %>" />
+				</a>
+				<div class="blog-overlay">
+					<h4 class="card-title">
+						<i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i>
+					</h4>
+					<div class="gallery-tags mt-5">
+						<% locals.galleries[index].tags.forEach(function (tag) { %>
+						<a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
+						<% }) %>
+					</div>
+					<form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+				</div>
+			</div>
+		</div>
+		<% }) %> <% } %>
+	</div>
+	<% if (!locals.error) { %>
+	<div class="col-6 offset-3 mb-3 mt-3">
+		<img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none;" />
+		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteTags();" />
+	</div>
+	<% } %>
 </div>
 
 <a class="lightbox-close" href="#close">
-  <div class="lightbox-target" id="expand">
-      <% if(locals.galleries){ %>
-          <img id="expandImg" src="/api/image/<%= locals.galleries[0].mainImgId %>"/>
-      <% } %>
-  </div>
+	<div class="lightbox-target" id="expand">
+		<% if(locals.galleries){ %>
+		<img id="expandImg" src="/api/image/<%= locals.galleries[0].mainImgId %>" />
+		<% } %>
+	</div>
 </a>
 
 <script>
-  function preventEnter(e, item) {
-    let keyCode = e.keyCode || e.which;
-    if (keyCode === 13) { 
-      e.preventDefault();
-      return false;
-    }
-  }
+	let tagInput = $("#tagInput");
+	let tags = "<%= locals.tags %>";
+	tags = tags.split(",");
 
-  let tagInput = $("#tagInput");
-  let tags = "<%= locals.tags %>";
-  tags = tags.split(',');
-
-  tagInput.tagsinput('add', "");
-  for (i = 0; i < tags.length; i++)
-    tagInput.tagsinput('add', tags[i]);
+	tagInput.tagsinput("add", "");
+	for (i = 0; i < tags.length; i++) tagInput.tagsinput("add", tags[i]);
 </script>
-<script src="/scripts/gallery/galleryScripts.js"></script>
 <% include partials/footer %>
