--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -6,19 +6,19 @@
 
 <div class="container container-single"> 
   <div class="single-wrapper">
-  <% if (locals.galleries) { %>
-    <div class="col-10 offset-1" id="<%= locals.galleries._id %>">
-      <h3 class="single-title col-12"><%= locals.galleries.title %>
+  <% if (locals.gallery) { %>
+    <div class="col-10 offset-1" id="<%= locals.gallery._id %>">
+      <h3 class="single-title col-12"><%= locals.gallery.title %>
         <% if (locals.user && locals.user.role === "admin") { %>
-          <a href="/Admin/Galerie/Patch/<%= locals.galleries._id %>"><i class="fas fa-edit"></i></a>
+          <a href="/Admin/Galerie/Patch/<%= locals.gallery._id %>"><i class="fas fa-edit"></i></a>
         <% } %> 
       </h3>  
 
       <div class="carousel-container mt-3">
         <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
-            <% if (locals.img) { %>
-              <% locals.img.forEach(function (item, index) { %>
+            <% if (locals.images) { %>
+              <% locals.images.forEach(function (item, index) { %>
                 <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
                   <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
                   <div class="carousel-caption d-none d-md-block">
@@ -41,8 +41,8 @@
       </div>
       <div class="thumbnail-wrapper mb-4 mt-3">
         <ol class="carousel-indicators no-thumb">
-          <% if (locals.img) { %>
-            <% locals.img.forEach(function (item, index) { %>
+          <% if (locals.images) { %>
+            <% locals.images.forEach(function (item, index) { %>
               <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
                 <img class="d-block w-100" src="/img/white_circle.png" alt="..." class="img-fluid">
               </li>
@@ -52,12 +52,12 @@
       </div>
 
       <div class="text-center">
-        <% locals.galleries.tags.forEach(function (tag) { %>
+        <% locals.gallery.tags.forEach(function (tag) { %>
           <a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
         <% }) %>
       </div>
 
-      <p class="blog-content col-10 offset-1 mt-2"><%= locals.galleries.content %></p>
+      <p class="blog-content col-10 offset-1 mt-2"><%= locals.gallery.content %></p>
 
       <div class="col-10 offset-1 text-center">
         <div class="pwinty-products">
@@ -72,7 +72,7 @@
             <label for="print">
               <div class="sku-item unselectable">
                 <p>Art Prints</p>
-                <input name="pwinty-category" id="print" value="PRINT" type="radio" onclick="loadCategory(this)"><!-- needs change VALUE -->
+                <input name="pwinty-category" id="print" value="PRINT" type="radio" onclick="loadCategory(this)">
               </div>
             </label>
 
@@ -93,7 +93,7 @@
         <div style="height: 200px">
           <div id="purchasebox" style="display: none;">
             <span id="price" style="color: white;"></span>
-            <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.galleries._id %>', this)"><!--disabled -->
+            <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.gallery._id %>', this)">
           </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
 
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"/>
+    <img id="expandImg" src="/api/image/<%= locals.images[0]._id %>"/>
   </div>
 </a>
 
@@ -114,6 +114,5 @@ $('#carousel-thumb').on('slide.bs.carousel', function (element) {
   $(`div.thumbnail-wrapper.mb-3 > ol > li:nth-child(${element.to + 1})`).addClass("active");
 })
 </script>
-<script src="/scripts/gallery/galleryScripts.js"></script>
 <script src="/scripts/frontValidation.js"></script>
 <% include ../partials/footer %>
