--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -152,7 +152,7 @@
 				<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
 				<div class="col-md-6 offset-3 mt-4">
 					<div class="payment-div p-3">
-						<% if (locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
+						<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
 						<span id="delivery-price-span">shipping(with tax): <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
 						<% } else { %>
 						<span id="delivery-price-span">shipping(with tax): <b id="delivery-price">FREE</b></span>
