--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -102,9 +102,9 @@
 				address: {
 					city: "<%= locals.billing.city %>",
 					country: "<%= locals.billing.country %>",
-					line1: "<%= locals.billing.fulltext_address %>",
+					line1: "<%= locals.billing.full_address %>",
 					line2: null,
-					postal_code: "<%= locals.billing.postal_code %>",
+					postal_code: "<%= locals.billing.zipcode %>",
 					state: "<%= locals.billing.state %>"
 				},
 				name: "<%= locals.billing.lastname %> <%= locals.billing.firstname %>",
