--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -29,17 +29,17 @@
 
 <script>
 	const toolbarOptions = [
-	    ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
+	    ['bold', 'italic', 'underline', 'strike'],
 	    ['blockquote', 'code-block'],
 	    [{ 'list': 'ordered'}, { 'list': 'bullet' }],
-	    [{ 'indent': '-1'}, { 'indent': '+1' }],          // outdent/indent
-	    [{ 'size': ['small', false, 'large', 'huge'] }],  // custom dropdown
+	    [{ 'indent': '-1'}, { 'indent': '+1' }],
+	    [{ 'size': ['small', false, 'large', 'huge'] }],
 	    [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
-	    [{ 'color': [] }, { 'background': [] }],          // dropdown with defaults from theme
+	    [{ 'color': [] }, { 'background': [] }],
 	    [{ 'font': [] }],
 	    [{ 'align': [] }],
 	    ['link', 'image'],
-	    ['clean']                                         // remove formatting button
+	    ['clean']
 	];
 
 	let quill = new Quill('#editor', {
